mod: update api specification and handler
