# api-specification.yaml
@@ -27,84 +27,104 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/users'
+                  $ref: '#/components/schemas/user'
         '500':
           description: Internal Server Error
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/details'
-  /users/new:
     post:
-    summary: New user account(s)
-    requestBody:
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/users'
-    responses:
-      '200':
-        description: Successfully created new user account(s)
-      '400':
-        description: Bad Request
+      summary: New user account(s)
+      requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/details'
-      '500':
-        description: Internal Server Error
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/details'
-  /users/delete:
+              $ref: '#/components/schemas/users'
+      responses:
+        '200':
+          description: Successfully created new user account(s)
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/details'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/details'
     delete:
-    summary: Delete user account
-    parameters:
-    - name: id
-      in: query
-      required: true
-      schema:
-        type: integer
-        minimum: 1
-    responses:
-      '200':
-        description: Successfully deleted the user account
-      '400':
-        description: Bad Request
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/details'
-      '500':
-        description: Internal Server Error
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/details'
-  /users/update:
+      summary: Delete user account
+      parameters:
+      - name: id
+        in: query
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Successfully deleted the user account
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/details'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/details'
     put:
-    summary: Update the user account
-    requestBody:
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/users'
-    responses:
-      '200':
-        description: The user account is successfully updated
-      '400':
-        description: Bad Request
+      summary: Update the user account
+      requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/details'
-      '500':
-        description: Internal Server Error
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/details'
+              $ref: '#/components/schemas/users'
+      responses:
+        '200':
+          description: The user account is successfully updated
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/details'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/details'
+
+  /roles:
+    get:
+      description: Returns all the roles from the system.
+      parameters:
+      - name: id
+        in: query
+        schema:
+          type: string
+      responses:
+        '200':
+          description: A list of roles.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/role'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/details'
 
 components:
   schemas:
@@ -128,7 +148,6 @@ components:
           type: integer
           format: int32
         role_id:
-          minLength: 1
           type: integer
           format: int32
         first_name:
@@ -154,6 +173,25 @@ components:
           type: string
           nullable: true
     
+    roles:
+      type: array
+      minItems: 1
+      maxItems: 10
+      uniqueItems: true
+      items:
+        $ref: '#/components/schemas/role'
+
+    role:
+      type: object
+      required:
+        - name
+      properties:
+        id:
+          type: integer
+          format: int32
+        name:
+          type: string
+
     details:
       type: object
       properties:
